# Numerica

./: README.md  requirements.txt
src/sieve/: CMakeLists.txt  python_wrapper.c  requirements.txt  setup.py  sieve.c  sieve.h  sieve_exceptions.c  sieve_exceptions.h
